--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "my_recipe_journal",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "turbolinks": "^5.1.1"
+  }
 }
